--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Pragati+Narrow:wght@400;700&display=swap');
 
 /* <!-- --# # # # # # # # # # # # # # # # # # # # # # # # # # # # # #-- -->
-
+ 
 <!-- =================== G E N E R A L   B O D Y   R U L E S =================== --> */
 .hidden{
   display: none;
@@ -11,13 +11,11 @@ html, body{
   font-family: 'Pragati', 'Helvetica', sans-serif;
   height: 100%;
   min-width: 320px;
-
   background-color: #E5F0FC;
 }
 /* <!-- --# # # # # # # # # # # # # # # # # # # # # # # # # # # # # #-- -->
 
 <!-- =================== L A N D S C A P E  =================== --> */
-
 .overlay{
   position: fixed;
   background-color: rgba(14, 28, 39, 0.7);
@@ -38,13 +36,17 @@ html, body{
 /* <!-- --# # # # # # # # # # # # # # # # # # # # # # # # # # # # # #-- -->
 
 <!-- =================== S I T E   H E A D E R =================== --> */
-
-#header-container{
+#header-container{              
   position: sticky;
   top:0;
+  min-width: 320px;
   background: linear-gradient(0.2turn,#0E1C27, #0A1C47);
   color: #E5F0FC;
   box-shadow: rgb(0, 0, 0, .5) 0px 1px 5px 2px;
+}
+#homepage-link{
+  text-decoration: none;
+  color:inherit;
 }
 #header-mobile{
   display:flex;
@@ -80,17 +82,14 @@ html, body{
 #nav-components > ul,
 #nav-social > ul {
   padding: 0;
-  list-style: none;
   text-align: center;
 }
 .nav-component {
-  display: block;
-  padding: .5em;
+  padding: 5px;
   width: 85%;
   border-radius: 0 1em 1em 0;
   background: linear-gradient(.2turn,#004564,#71E7F5);
   margin-bottom: 10px;
-  font-size: 1.2em;
 }
 .nav-component:hover{
   cursor: pointer;
@@ -101,38 +100,37 @@ html, body{
 }
 #nav-components > ul > a{
   position: static;
-  /* margin-left: 15%; */
   font-weight: bold;
   text-decoration: none;
   color: #FEFEFE
 }
 .nav-item{
-  margin:10px;
+  margin:5px;
 }
 .nav-item > a {
   text-decoration: none;
   color: inherit;
-  display: inline;
-  position: relative;
 }
 /* <!-- --# # # # # # # # # # # # # # # # # # # # # # # # # # # # # #-- -->
 
 <!-- =================== M A I N   C O N T E N T =================== --> */
-
-#body-container{
+#main-container{
   color: #0E1C27;
   background-color: #FEFEFE;
   box-shadow: rgb(0, 0, 0,.5) 0px 0px 30px 1px;
-  padding: 20px;
-}
+  padding: 15px;
+} 
 #back-button-container{
   display:none
 }
 /*<!-- =================== M O S T   R E C E N T   S E C T I O N ================== --> */
-.section{
-  margin: 0 0 50px 0;
+.sections-container{
+  width: 100%;
 }
-.section_title{
+.section-container{
+  margin: 25px 0;
+}
+.section-title{
   margin: 0;
 }
 .section-separator{
@@ -161,18 +159,25 @@ html, body{
   font-weight: bold;
   color: #0E1C27;
 }
-#p_img-container{
+.p_img-container{
+  overflow: hidden;
   text-align: center;
-  margin: 10px 0;
+  margin: 20px 0;
 }
-#p_paragraphs{
+.p_img{
+  object-fit: cover;
+ }
+#p_description, .p_paragraphs{
   text-align: justify;
 }
 .button-container{
   text-align: center;
 }
 .button {
+  display: inline-block;
   border: none;
+  color:#0E1C27;
+  text-decoration: none;
   background-color: #71E7F5;
   box-shadow: lightgray 0px 5px 5px;
   font-size: 15pt;
@@ -181,48 +186,98 @@ html, body{
   padding: 1em;
   width: 80%;
 }
-/*<!-- =================== R E L A T E D   S E C T I O N =================== --> */
 
+/*<!-- =================== R E L A T E D   S E C T I O N =================== --> */
 #related{
   overflow: hidden;
-  text-align: center;
 }
-#p_related-list{
+.related-list{
   display:flex;
+  list-style: none;
+  padding: 0;
   overflow-x: auto;
   scroll-snap-type: x mandatory
 }
-.p_related-title{
-  margin: 0 0 10px 0;
-}
-.p_related{
-  width: 150px;
-  margin: 0 20px 0 0;
-}
-/* <!-- --# # # # # # # # # # # # # # # # # # # # # # # # # # # # # #-- -->
-/*<!-- =================== F O O T E R =================== --> */
-
-#footer {
-  text-align: center;
-}
-.copyrights{
-  display: inline-block;
-  font-size: .8em;
+.related-item{
+  width: 200px;
   margin: 20px;
 }
+.related-title{
+  text-align: center;
+  margin: 0 0 10px 0;
+}
+
+/* <!-- --# # # # # # # # # # # # # # # # # # # # # # # # # # # # # #-- -->
+ /*<!-- =================== R A T I N G   A N D   A B O U T   A U T H O R =================== --> */
+ .about_post-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.rating-container{
+  text-align: center;
+}
+.star-widget{
+  display: flex;
+  flex-direction: row-reverse;
+  margin: 20px 0;
+}
+.star-widget > input{
+  display:none;
+}
+.star-widget > label{
+  font-size: 30px;
+  color: #444;
+  transition: all 0.2s ease;
+}
+.star-widget > input:not(:checked) ~ label:hover,
+.star-widget > input:not(:checked) ~ label:hover ~ label {
+  color:#fd4;
+}
+.star-widget > input:checked ~ label {
+  color: #fd4;
+}
+.about_author-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.about_author{
+  text-align: center ;
+}
+.author_img-container{
+  overflow: hidden;
+  height: 150px;
+  width: 150px;
+  border-radius: 50%;
+  margin: 30px 0;
+}
+
+/* <!-- --# # # # # # # # # # # # # # # # # # # # # # # # # # # # # #-- -->
+/*<!-- =================== F O O T E R =================== --> */
+#footer {
+  display: block;
+  text-align: center;
+  padding: 30px;
+}
+.copyrights{
+  display: block;
+  font-size: .8em;
+  margin: 20px 0 0 0;
+}
+
 /* <!-- --# # # # # # # # # # # # # # # # # # # # # # # # # # # # # #-- -->
  /*<!-- =================== C O N T A C T   F O R M =================== --> */
-#contact-container{
-  margin: 40px auto;
-  width: 100%;
-  height: 80%;
-  font-size: 1.1em;
+.contact_form-container{
+  display: flex;
+  justify-content: center;
+  margin:0;
+  height: 100%;
 }
-#contact{
+.contact_form{
   width: 100%;
-  display: block;
 }
- .f_lbl{
+.f_lbl{
   display: block;
   font-weight: bold;
   margin: 0 0 5px 0;
@@ -230,7 +285,7 @@ html, body{
 .f_field{
   display: block;
   width: 100%;
-  height: 1.5em;
+  height: 1.5em; 
   margin: 0 0 20px 0;
   padding: 0 0 0 0;
 }
@@ -248,13 +303,30 @@ html, body{
 .submit-container{
   display: flex;
   justify-content: center;
-  margin: 20px;
+  margin: 20px 0;
 }
+.submit-container > input {
+  width: 100%;
+}
+
 /* <!-- --# # # # # # # # # # # # # # # # # # # # # # # # # # # # # #-- -->
  /*<!-- =================== M E D I A   Q U E R I E S =================== --> */
 @media screen and (min-width:280px){
  #logo-type{
    font-size: 20pt;
+  }
+}
+@media screen and (min-width:500px){
+  .sections-container{
+    width: 90%;
+    height: 100%;
+  }
+  #main-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 1em;
+    padding: 50px;
   }
 }
 @media screen and (min-width:700px){
@@ -266,10 +338,6 @@ html, body{
   }
   .nav-item{
     font-size: 1.4em ;
-  }
-  #body-container{
-    font-size: 1.3em;
-    padding: 2em;
   }
   #p_title{
     margin: 30px 0;
@@ -293,20 +361,45 @@ html, body{
     text-align: end;
     grid-area:tags;
   }
-  #p_body{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  .sections-container{
+    width: 80%;
   }
-  #p_img{
-    width: 50%;
+  .about_author-container{
+    display: grid;
+    grid-template: auto / auto 1fr;
+    grid-gap: 50px;
   }
 }
-@media screen and (min-width: 1024px)  {
+@media screen and (min-width:1024px){
+  .about_post-container{
+    display: grid;
+    grid-template: auto / auto auto;
+    grid-gap: 80px;
+    align-items: flex-start;
+  }
+  .p_img-container{
+    margin:40px 0;
+  }
+  .contact_form{
+    width: 60%;
+    font-size: 1.3em;
+  }
+}
+@media screen and (min-width:1300px){
+    .about_author-container{
+      display: grid;
+      grid-template: auto / auto auto;
+      grid-gap: 20px;
+      align-items: flex-start;
+    }
+    .contact_form{
+      width: 50%;
+    }
+}
+@media screen and (min-width: 1280px)  {
   body{
     display: grid;
-    grid-template: 'nav  body body body body';
-    width: 97%;
+    grid-template: 1fr / 350px repeat(5, 1fr);
     overflow-x: hidden;
   }
   .hidden{
@@ -315,17 +408,15 @@ html, body{
   #logo-type{
     font-size: 2em;
     letter-spacing: 2px;
-    margin: 10px
+    margin: 10px 
   }
   #nav-icon{
     display: none;
   }
   #header-container{
-    grid-area: nav;
-    position: sticky;
+    grid-column: 1;
+    position: sticky; 
     left:0;
-    min-width: 270px;
-    height: 100%;
     overflow: hidden;
     font-size: 1.1em;
   }
@@ -339,57 +430,45 @@ html, body{
   #nav-menu{
     height: 90%;
   }
-  #body-container{
-    grid-area: body;
+  #main-container{
+    grid-column: 2 / 7;
     overflow-y: scroll;
     margin: 0 0 0 40px;
-    padding: 50px 50px 50px 100px;
-  }
-  #main{
-    width: 95%;
-    height: 85%;
-  }
-  .section{
-    margin: 0 0 100px 0;
   }
   #back-button-container{
+    display: block;
     width:100%;
     text-align: left;
+    position: sticky;
+    left:0;
+    top:0;
   }
-  #back-button{
-    display: block;
-  }
-  #p_body{
-  flex-direction: column;
+  .sections-container{
+    width: 75%;
   }
   .button{
     font-size: 1.2em;
     grid-area:button;
     width: 60%;
   }
-  #p_related-list{
+  .related-list{
     overflow:initial;
     scroll-snap-type:none;
     flex-wrap: wrap;
-  }
-  #contact-container{
-    width: 50%;
-    height: 100%;
-    font-size: 1.2em;
+    justify-content: center;
   }
 }
 @media screen and (min-width: 1500px){
-  #body-container{
-    width: 89%;
-  }
-  #p_body{
+  .mr{
     display:grid;
-    grid-template: 'img content'
-                   'img button';
-    grid-gap:20px 30px;
+    grid-template: 1fr / 1fr 1fr;
+    grid-column-gap: 40px;
   }
-  #p_img-container{
-    grid-area:img;
-    min-width: 450px;
+}
+@media screen and (min-width: 1600px){
+  .about_author-container{
+    display: grid;
+    grid-template: auto / auto 1fr;
+    grid-gap: 50px;
   }
 }
