--- a/public/css/index.css
+++ b/public/css/index.css
@@ -172,6 +172,8 @@ html, body{
  }
 #p_description, .p_paragraphs{
   text-align: justify;
+  letter-spacing: .2px;
+  font-stretch: wider;
 }
 .button-container{
   text-align: center;
@@ -330,7 +332,7 @@ html, body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 1em;
+    font-size: 1.2em;
     padding: 50px;
   }
 }
