--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,5 +1,7 @@
 @import './normalize.css';
-@import './admin.css';
+@import './mod-header.css';
+@import './mod-admin.css';
+@import './mod-form.css';
 @import url('https://fonts.googleapis.com/css2?family=Pragati+Narrow:wght@400;700&display=swap');
 
 /* <!-- --# # # # # # # # # # # # # # # # # # # # # # # # # # # # # #-- -->
@@ -34,83 +36,7 @@ html, body{
   height: 100%;
   object-fit: contain;
 }
-/* <!-- --# # # # # # # # # # # # # # # # # # # # # # # # # # # # # #-- -->
 
-<!-- =================== S I T E   H E A D E R =================== --> */
-#header-container{
-  position: sticky;
-  top:0;
-  min-width: 320px;
-  background: linear-gradient(0.2turn,#0E1C27, #0A1C47);
-  color: #E5F0FC;
-  box-shadow: rgb(0, 0, 0, .5) 0px 1px 5px 2px;
-}
-#homepage-link{
-  text-decoration: none;
-  color:inherit;
-}
-#header-mobile{
-  display:flex;
-  justify-content: space-between;
-  padding: 20px;
-}
-#logotype-container{
-  display: flex;
-  align-items: center;
-}
-#logo-type{
-  display: inline;
-  margin: 0 0 0 20px;
-}
-/* <!-- =================== N A V I G A T I O N   M E N U =================== -->  */
-
-#nav-icon{
-  width: 40px;
-}
-#nav-menu{
-  height: 90vh;
-  flex-direction: column;
-  justify-content: space-between;
-  background-image: url("../assets/bg_graphics.png");
-  background-size: 80%;
-}
-#nav-menu-mobile{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 90%;
-}
-#nav-components > ul,
-#nav-social > ul {
-  padding: 0;
-  text-align: center;
-}
-.nav-component {
-  padding: 5px;
-  width: 85%;
-  border-radius: 0 1em 1em 0;
-  background: linear-gradient(.2turn,#004564,#71E7F5);
-  margin-bottom: 10px;
-}
-.nav-component:hover{
-  cursor: pointer;
-  transform: scaleX(1.1)
-}
-.nav-component:active{
-  transform:scaleX(1.2);
-}
-#nav-components > ul > a{
-  position: static;
-  font-weight: bold;
-  text-decoration: none;
-  color: #FEFEFE
-}
-.nav-item{
-  margin:5px;
-}
-.nav-item > a {
-  text-decoration: none;
-  color: inherit;
 }
 /* <!-- --# # # # # # # # # # # # # # # # # # # # # # # # # # # # # #-- -->
 
@@ -290,48 +216,6 @@ html, body{
   margin: 20px 0 0 0;
 }
 
-/* <!-- --# # # # # # # # # # # # # # # # # # # # # # # # # # # # # #-- -->
- /*<!-- =================== C O N T A C T   F O R M =================== --> */
-.form-container{
-  display: flex;
-  justify-content: center;
-  margin:0;
-  height: 100%;
-}
-.ll_form{
-  width: 100%;
-}
-.f_lbl{
-  display: block;
-  font-weight: bold;
-  margin: 0 0 5px 0;
-}
-.f_field{
-  display: block;
-  width: 100%;
-  height: 1.5em;
-  margin: 0 0 20px 0;
-  padding: 0 0 0 0;
-}
-.comments{
-  resize: none;
-  height: 100px;
-  width: 100%;
-  margin: 10px 0;
-}
-.f_chk{
-  width: 1em;
-  height: 1em;
-  margin: 10px 0 ;
-}
-.submit-container{
-  display: flex;
-  justify-content: center;
-  margin: 20px 0;
-}
-.submit-container > input {
-  width: 100%;
-}
 
 /* <!-- --# # # # # # # # # # # # # # # # # # # # # # # # # # # # # #-- -->
  /*<!-- =================== M E D I A   Q U E R I E S =================== --> */
