--- a/resources/less/index.less
+++ b/resources/less/index.less
@@ -15,4 +15,5 @@
 @import 'mod-about.less';
 @import 'mod-related.less';
 @import 'mod-footer.less';
-@import 'media-queries.less';
+@import 'mod-admin.less';
+// @import 'media-queries.less';
