--- a/resources/less/_config.less
+++ b/resources/less/_config.less
@@ -1,6 +1,6 @@
 
 // -------- FONTS --------
-@font : 'Pragati';
+@base-font-family : 'Pragati';
 @base-font-size: 15px;
 
 // -------- COLORS --------
@@ -20,10 +20,10 @@
 @webfonts : "../assets/webfonts/";
 
 
-// -------- MIXIN --------
+// -------- MIXINS --------
 .init(){
     html, body {
-        font-family: @font;
+        font-family: @base-font-family;
         font-size: @base-font-size;
         min-width: 320px;
         height: 100%;
@@ -32,11 +32,24 @@
     }
     a {
         text-decoration: none;
+        color: @fg-color;
+    }
+    .hidden{
+        display: none;
     }
 }
 .box-shadow(){
-    box-shadow: rgb(0, 0, 0,.5) 0px 0px 30px 1px;
+    box-shadow: fade(@complement-color, 50%) 0px 1px 5px 2px;
 }
-
+.icon-size(@size:40px){
+    width: @size;
+    height:@size;
+}
+.rounded-corners(@size:50px){
+  border-radius: 0 @size @size 0;
+}
+.web-font-size(@size){
+    font-size: @base-font-size + @size;
+}
 
 
