--- a/resources/less/index.less
+++ b/resources/less/index.less
@@ -12,5 +12,10 @@
 @import 'mod-related.less';
 @import 'mod-footer.less';
 @import 'mod-admin.less';
-// @import 'media-queries.less';
 
+// @import 'media-queries.less';
+.button {
+    font-size: 1.2em;
+    grid-area: button;
+    width: 60%;
+}
