--- a/resources/less/mod-footer.less
+++ b/resources/less/mod-footer.less
@@ -1,12 +1,14 @@
-/* <!-- --# # # # # # # # # # # # # # # # # # # # # # # # # # # # # #-- -->
-/*<!-- =================== F O O T E R =================== --> */
+/* # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+=============================== F O O T E R ===================================
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # */
+
 #footer {
     display: block;
     text-align: center;
-    padding: 30px;
-  }
-  .copyrights{
+}
+
+.copyrights {
     display: block;
     font-size: .8em;
     margin: 20px 0 0 0;
-  }
+}
