--- a/resources/less/_config.less
+++ b/resources/less/_config.less
@@ -37,6 +37,11 @@
     .hidden{
         display: none;
     }
+    .button {
+        font-size: 1.2em;
+        grid-area: button;
+        width: 60%;
+    }
 }
 .box-shadow(){
     box-shadow: fade(@complement-color, 50%) 0px 1px 5px 2px;
